# rust-auth

./: .env.example  .gitignore  Cargo.toml
src/: config.rs  database.rs  error.rs  lib.rs  main.rs  model.rs  models.rs  server.rs  utils.rs
src/routes/: auth.rs  ping.rs
src/utils/: hash.rs  jwt.rs  time.rs
