[package]
name = "auth_server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
argon2 = "0.5.3"
axum = "0.8.8"
password-hash = { version = "0.5.0", features = ["getrandom"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "uuid"] }
tokio = { version = "1.50.0", features = ["full"] }
uuid = { version = "1.22.0", features = ["serde"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
jsonwebtoken = { version = "10.3.0", default-features = false, features = ["rust_crypto"] }
chrono = "0.4.44"
dotenvy = "0.15.7"
tower_governor = "0.8.0"
